Populate chunkId and set isLastChunk for ResultSetChunk